--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!-- End Google Analytics -->
 <title>HSV Colour Segmentation Explorer</title>
 <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet">
-<link href="style.css" rel="stylesheet">
+<link href="/ColourSegmentationJS/style.css" rel="stylesheet">
 
 <p class="err" id="errorMessage"></p>
 <h2>HSV Colour Segmentation Explorer</h2>
@@ -64,7 +64,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.6.4/dat.gui.min.js" type="text/javascript"></script>
 
 <script src="https://docs.opencv.org/master/utils.js" type="text/javascript"></script>
-<script src="main.js" type="text/javascript"></script>
+<script src="/ColourSegmentationJS/main.js" type="text/javascript"></script>
 <script async src="https://docs.opencv.org/master/opencv.js" onload="onOpenCVReady();" type="text/javascript"></script>
 
 </html>
